# gettext-1.0

./: .gitignore  Makefile  Makefile.am  Makefile.in  aclocal.m4  append_darwin_shim_with_config.h  apply_absolute_shims.sh  clean.sh  config.h.in  config.h.shim.sh  config.status  configure  configure.ac  copy_embedded_library.sh  create_darwin_shim.sh  create_darwin_shim.sh.bak  create_darwin_shim.sh.bak2  create_darwin_shim_h.sh  create_darwin_shim_h_1  create_darwin_shims.sh.bak3  create_stdio_shim.sh  create_uchar_header.sh  create_unicase.h  darwin_shim.h  darwin_shim.h.bak  darwin_shim.h.notes.txt  enforce_config_h_first.sh  enforce_configure_first.sh  fix_unictype.h.sh  fix_wctype.h  header_data3.sh  header_fixes.sh  header_fixes3.sh  header_fixes4.sh  libtool  link_unicase_dependencies.sh  notes.txt  patch_block.tmp  stdint.h.sh  sync_and_link_unicode.sh  (+6 more)
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
darwin_fixes/: create_faux_darwin_headers4.sh  darwin_gold_fix.sh  darwin_home_strech.sh  darwin_linker4.sh.in  darwin_linker_scrubs.sh.in  darwin_lockdown.sh  darwin_porting_fixes.sh  darwin_porting_shim2.sh  darwin_shim.h  darwin_shim3.sh.in  darwin_stubs.sh.in  darwin_stubs2.sh.in  darwin_symbol.sh.in  darwin_update_stubs3.sh.in  everything.sh  fix_clang_trap.sh  fix_darwin_memory_io.sh  fix_gnulib.sh  fix_gnulib2.sh  fix_intl.sh  fix_libasprintf_2.sh  force_intl_nuke.sh  loop-killer2.sh  proxy_libasprintf.sh  proxy_libtool.sh  shim-verification.sh  tmp.sh  use_macos_libs.sh
darwin_fixes/darwin_porting_efforts/: darwin-nuke.sh  darwin-porting-script.sh  darwin1.sh  darwin2.sh  darwin3.sh  darwin_headers3.sh
darwin_fixes/redundant_scripts/: .notes.txt.swp  darwin_build_try11.sh  darwin_fixes.sh  darwin_manual_link.sh  darwin_more_manual.sh  darwin_shim.h  darwin_shim.h.sh  darwin_shim2.h.sh  darwin_shim4.sh.in  darwin_shim5.sh.in  darwin_shim6.sh.in  darwin_sync_linker_stubs.sh.in  ensure_subdirs_fixed_darwin.sh  fix_libgnu_harddep.sh  fix_sepertors.sh  libasprintf_darwin_fix.sh  master_darwin_recovery.sh  master_nuke.sh  nuke2.sh  nuke3.sh  passthrough_fix.sh  re-inject-shim.sh  reconfigure-darwin.sh  record_all_errors.sh  revert_config.h_shim.sh  stop_trippping_acid.sh  timestamp-freeze-darwin.sh  tmp2.sh
darwin_research/: create_unictype.h  darwin_port.sh  darwin_shim_gettext.sh  deep.sh  header_fixes.sh  header_fixes2.sh  header_fixes3.sh  notes.txt  recommended_at_top_of_darwin_shim.txt  wctype.h.in
gettext-runtime/: Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  csharpcomp.sh  javacomp.sh  libtool  uninstalled-config.sh
gettext-runtime/autom4te.cache/: output.0  output.2  output.3  output.4  output.5  output.6  requests  traces.0  traces.1  traces.10  traces.11  (+7 more)
gettext-tools/: Makefile  Makefile.in  aclocal.m4  atomic.sh  clean.sh  config.h  config.h.in  config.status  configure  configure.ac  csharpexec.sh  darwin_cleanup_consolidation.txt  libtool  prep.sh  sanatizer.sh  update1.sh
gettext-tools/examples/: Makefile  aclocal.m4  config.status  configure  configure.ac  installpaths
gettext-tools/examples/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.3
gettext-tools/examples/hello-c/: configure.ac
gettext-tools/examples/hello-c++/: configure.ac
gettext-tools/examples/hello-c++-gnome2/: configure.ac
gettext-tools/examples/hello-c++-gnome3/: configure.ac
gettext-tools/examples/hello-c++-qt/: configure.ac
gettext-tools/examples/hello-c++-wxwidgets/: configure.ac
gettext-tools/examples/hello-c++20/: configure.ac
gettext-tools/examples/hello-c-gnome2/: configure.ac
gettext-tools/examples/hello-c-gnome3/: configure.ac
gettext-tools/examples/hello-c-http/: configure.ac
gettext-tools/examples/hello-clisp/: configure.ac
gettext-tools/examples/hello-csharp/: configure.ac
gettext-tools/examples/hello-csharp-forms/: configure.ac
gettext-tools/examples/hello-d/: configure.ac
gettext-tools/examples/hello-gawk/: configure.ac
gettext-tools/examples/hello-go/: configure.ac
gettext-tools/examples/hello-go-http/: configure.ac
gettext-tools/examples/hello-guile/: configure.ac
gettext-tools/examples/hello-java/: configure.ac
gettext-tools/examples/hello-java-awt/: configure.ac
gettext-tools/examples/hello-java-qtjambi/: configure.ac
gettext-tools/examples/hello-java-swing/: configure.ac
gettext-tools/examples/hello-librep/: configure.ac
gettext-tools/examples/hello-modula2/: configure.ac
gettext-tools/examples/hello-objc/: configure.ac
gettext-tools/examples/hello-objc-gnome2/: configure.ac
gettext-tools/examples/hello-ocaml/: configure.ac
gettext-tools/examples/hello-pascal/: configure.ac
gettext-tools/examples/hello-perl/: configure.ac
gettext-tools/examples/hello-php/: configure.ac
gettext-tools/examples/hello-python/: configure.ac
gettext-tools/examples/hello-ruby/: configure.ac
gettext-tools/examples/hello-rust/: configure.ac
gettext-tools/examples/hello-sh/: configure.ac
gettext-tools/examples/hello-smalltalk/: configure.ac
gettext-tools/examples/hello-tcl/: configure.ac
gettext-tools/examples/hello-tcl-tk/: configure.ac
gettext-tools/examples/hello-ycp/: configure.ac
gettext-tools/examples/po/: Makefile
gnulib-lib/: Makefile  Makefile.am  Makefile.in  alloca.h  alloca.in.h  assert.h  config.h  float.h  fseterr.c  hard-locale.c  inttypes.h  limits.h  locale.h  memrchr.c  stdcountof.in.h  stddef.h  stdint.h  stdio.h  stdlib.h  stdlib.in.h  sys_types.in.h  uchar.h  unicase.h  uniconv.h  unictype.h  unictype.in.h  uninorm.h  unistd.h  unistd.in.h  uniwidth.h  vasnprintf.c  wchar.h  wctype.h
gnulib-local/: Makefile  Makefile.in
gnulib-m4/: gnulib-cache.m4  gnulib-comp.m4
lib/: Makefile.am
libtextstyle/: Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool  uninorm.h
libtextstyle/examples/color-hello/: configure.ac
m4/: gnulib-cache.m4  gnulib-comp.m4
(+1260 files in other folders)
